--- a/configs.json
+++ b/configs.json
@@ -64,15 +64,17 @@
         "lord_hexron": {
             "pet_id": "694f77166f94c5dfed87b72d",
             "expeditionId": "67597aaf95ff918743e31d5e",
-            "expeditionName": "Snowlit Avenue"
+            "expeditionName": "Snowlit Avenue",
+            "pet_name": "Lord Hexron"
         },
         "cowham": {
             "pet_id": "695d552b825f08976d152cc9",
             "expeditionId": "66fd2a3249652dbe6a40dfe0",
-            "expeditionName": "Deep Forest"
+            "expeditionName": "Deep Forest",
+            "pet_name": "CowHam"
         }
     },
-    "version": "2026.01.13",
+    "version": "1.0.0",
     "themeVersion": "1.0.0",
     "fetchMinMs": 15000,
     "fetchMaxMs": 30000
