--- a/configs.json
+++ b/configs.json
@@ -63,12 +63,14 @@
     "PETS": {
         "lord_hexron": {
             "pet_id": "694f77166f94c5dfed87b72d",
+            "user_pet_id": "695d552b825f08976d152cc9",
             "expeditionId": "67597aaf95ff918743e31d5e",
             "expeditionName": "Snowlit Avenue",
             "pet_name": "Lord Hexron"
         },
         "cowham": {
-            "pet_id": "695d552b825f08976d152cc9",
+            "pet_id": "66f6b5e23899a1c714b24941",
+            "user_pet_id": "695d552b825f08976d152cc9",
             "expeditionId": "66fd2a3249652dbe6a40dfe0",
             "expeditionName": "Deep Forest",
             "pet_name": "CowHam"
