--- a/configs.json
+++ b/configs.json
@@ -66,14 +66,16 @@
             "user_pet_id": "694f77166f94c5dfed87b72d",
             "expeditionId": "67597aaf95ff918743e31d5e",
             "expeditionName": "Snowlit Avenue",
-            "pet_name": "Lord Hexron"
+            "pet_name": "Lord Hexron",
+            "recharge_time": 12
         },
         "cowham": {
             "pet_id": "66f6b5e23899a1c714b24941",
             "user_pet_id": "695d552b825f08976d152cc9",
             "expeditionId": "66fd2a3249652dbe6a40dfe0",
             "expeditionName": "Deep Forest",
-            "pet_name": "CowHam"
+            "pet_name": "CowHam",
+            "recharge_time": 24
         }
     },
     "version": "1.0.0",
